force-app/main/default/objects/Trigger_Setting__mdt/fields/After_Delete_Disabled__c.field-meta.xml
<CustomField>
    <fullName>After_Delete_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Delete Disabled</label>
    <type>Checkbox</type>
</CustomField>