force-app/main/default/objects/Trigger_Setting__mdt/fields/After_Undelete_Disabled__c.field-meta.xml
<CustomField>
    <fullName>After_Undelete_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Undelete Disabled</label>
    <type>Checkbox</type>
</CustomField>