force-app/main/default/objects/Trigger_Setting__mdt/fields/After_Update_Disabled__c.field-meta.xml
<CustomField>
    <fullName>After_Update_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Update Disabled</label>
    <type>Checkbox</type>
</CustomField>