force-app/main/default/objects/Trigger_Setting__mdt/fields/Before_Insert_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Before_Insert_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Insert Disabled</label>
    <type>Checkbox</type>
</CustomField>