force-app/main/default/objects/Trigger_Setting__mdt/fields/Before_Update_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Before_Update_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Before Update Disabled</label>
    <type>Checkbox</type>
</CustomField>