force-app/main/default/objects/Trigger_Setting__mdt/fields/Trigger_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>